src/app/components/file/file-create/file-create.component.scss
label {
    font: 2rem;
    font-weight: bold;
}




input, button, select {
    border: none;
    margin: .7rem;
    padding: .5rem;
    // background-color: #fac682;
}

.form-input__section {
    padding: 4rem 2rem;
    margin-bottom: 5rem;
    border-radius: 10px;
}

.txt-tertiary {
    font-size: 1.7rem;
    margin: 2rem;
}

.txt-secondary {
    font-size: 1.5rem;
}

.consultation-notes {
    text-align: center;
    margin: 2rem;
}

.notes {
    width: 40vw;
}

// label {
//     color: #4b4949;
//     font-size: 1rem;
//     font-weight: 700;
// }

// .btn {
//     color: seashell;
//     font-size: 1.5rem;
//     font-weight: bold;
//     margin: 30px auto;
//     padding: 10px;
// }
// .btn-half {
//    width: 50%; 
// }

// .btn--purple {
//     background-color: purple;
// }

// .form-control {
//     color: purple;
//     font-size: 2rem;
//     padding: 10px;
// }


// .border__reset {
//     border: none;
// }


// .form__flex--col {
//     display: flex;
//     flex-direction: column;
// }

